# COS710

./: README.md
GP/: .clang-format  CMakeLists.txt  DataProccessor.h  DataProcessor.cpp  Dataset Documentation for Residential Energy Data.docx  FullGrowTree.cpp  FullGrowTree.h  GrowTree.cpp  GrowTree.h  Node.cpp  Node.h  README.md  Tree.cpp  Tree.h  data_processor.py  main.cpp  makefile  tests.txt  utilities.h
GP/dataset/: processed.csv  results.csv  test.csv  validation.csv
GP/plotter/: plotter.py
